backend/backend.log
Starting SharePoint Assistant Backend with ProactorEventLoop...
Traceback (most recent call last):
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/run_server.py", line 13, in <module>
    uvicorn.run("app.main:app", host="0.0.0.0", port=8000, reload=False, loop="asyncio")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/main.py", line 593, in run
    server.run()
    ~~~~~~~~~~^^
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/asyncio/runners.py", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/asyncio/base_events.py", line 725, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/venv/lib/python3.13/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1027, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/app/main.py", line 11, in <module>
    from app.api.api_v1.api import api_router
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/app/api/api_v1/api.py", line 2, in <module>
    from app.api.api_v1.endpoints import dashboard, search, documents, sync, config, studio, status, notebook
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/app/api/api_v1/endpoints/dashboard.py", line 2, in <module>
    from app.services.rag_engine import rag_engine
  File "/Users/santoshiraman/Desktop/HUC/sharepoint-insight-engine/backend/app/services/rag_engine.py", line 394
    def generate_deep_report(self, topic: str, source_ids: List[str] = []) -> str:
SyntaxError: expected 'except' or 'finally' block
